[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-eli-mcp"
version = "0.2.1"
description = "MCP server for Laws of Malaysia Online (lom.agc.gov.my) — fetch and cite Malaysian principal Acts by act number."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Matematic Solutions", email = "kontakt@matematic.co" },
    { name = "Wieslaw Mazur", email = "mazur.wieslaw2022@gmail.com" },
]
keywords = ["mcp", "legaltech", "malaysia", "law"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "diskcache>=5.6",
    "anyio>=4.3",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/matematicsolutions/my-eli-mcp"
Issues = "https://github.com/matematicsolutions/my-eli-mcp/issues"
Homepage = "https://matematic.co"

[project.scripts]
my-eli-mcp = "my_eli_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/my_eli_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# INSTRUCTIONS is a long-form operational prose string shown to the LLM
"src/my_eli_mcp/server.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["diskcache.*", "fastmcp.*", "pypdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
